--- a/swimpool_app/src/main/resources/templates/swimpool/list.html
+++ b/swimpool_app/src/main/resources/templates/swimpool/list.html
@@ -2,7 +2,6 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>수영장 정보 목록</title>
     <link href="/smbg/css/styles.css" rel="stylesheet" />
     <style>
@@ -16,21 +15,21 @@
         .content {
             /* 화면 안의 내용이 있는 곳의 스타일 */
             width: 80%;
-            height: 150px;
+            height: 100%;
             margin: 20px auto;
         }
 
         .modal_popup {
             /* 모달 화면 안의 스타일, z-index: 값이 가장 크므로 화면의 상위에 표현된다.*/
             width: 70%;
-            height: 850px;
+            height: 400px;
             margin: 0 auto;
             padding: 20px;
             text-align: center;
             background-color: azure;
             display: flex;
             flex-flow: column;
-            position: absolute;
+            position: fixed;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
@@ -41,11 +40,12 @@
             /* 모달 화면이 나타나면 화면 안의 내용 div id="content" 를 어둡게 만든다.
                 z-index 값을 content 보다 크므로 마우스 클릭시 modal_bg 에 클릭이 된다.
              */
-            position: absolute;
+            position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
+            overflow: auto;
             background-color: rgba(0, 0, 0, 0.5);
             /*z-index: 99;*/
         }
@@ -59,8 +59,21 @@
             $('#showAddModalButton').click(function () {
                 // jQuery 의 객체가 클릭되면 실행할 함수를 등록 (이벤트/핸들러 방식)
                 // id="modal_box_add" 요소를 1000ms 동안 서서히 보여준다.
-                $('.modal_popup').fadeIn(1000);
-                $('.modal_background').fadeIn(1000);
+                $("#titleForm").text("입력");
+                $("#insertActionButton").show();
+                $("#updateButton").hide();
+                $("#updateActionButton").hide();
+                $("#deleteActionButton").hide();
+
+                $.clearInputPopup();
+
+                $("#inName").removeAttr("disabled");
+                $("#inPhoneNumber").removeAttr("disabled");
+                $("#inAddr").removeAttr("disabled");
+                $("#inLaneType").removeAttr("disabled");
+                $("#inLanes").removeAttr("disabled");
+                $('.modal_popup').fadeIn(300);
+                $('.modal_background').fadeIn(300);
             });
 
             $('.modalCloseButton').click(function () {
@@ -68,6 +81,23 @@
                 // id="modal_box_add" 요소와 class="modal_bg" 요소를 서서히 감춘다.
                 $('.modal_popup').fadeOut();
                 $('.modal_background').fadeOut();
+            });
+
+            $("#updateButton").click(function() {
+                $("#titleForm").text("수정");
+
+                $("#inName").removeAttr("disabled");
+                $("#inPhoneNumber").removeAttr("disabled");
+                $("#inAddr").removeAttr("disabled");
+                $("#inLaneType").removeAttr("disabled");
+                $("#inLanes").removeAttr("disabled");
+
+                $("#updateButton").hide();
+                $("#updateActionButton").show();
+            });
+
+            $("#updateActionButton").on("click", function(){
+                $.update();
             });
         });
 
@@ -98,6 +128,7 @@
                 strHtml += $.makeOneRow(list[i]);
                 // 배열의 객체만큼 loop 를 돌면서 html 출력 문자열을 만든다.
             }
+            $("#listPrint").empty();
             $("#listPrint").append(strHtml);
             // listPrint ID 인 태그에 자식으로 뒷부분에 계속 추가한다.
         }
@@ -105,55 +136,81 @@
         $.makeOneRow = (item) => {
             // 1개 객체의 정보를 div card 형태로 출력 html 문자열을 리턴 한다.
             let str = `\
-            <div class="row gx-4 gx-lg-5">\
-                <div class="col-md-4 mb-5">\
-                    <div class="card h-100">\
-                        <div class="card-body">\
-                            <div>이름 : ${item.name}</div>\
-                            <div>전화 : ${item.phoneNumber}</div>\
-                            <div>형태 : ${item.laneType}</div>\
-                            <div>개수 : ${item.lanes}</div>\
-                        </div>\
+<!--            <div class="row gx-4 gx-lg-5">\-->
+            <div class="col-md-4 mb-5">\
+                <div class="card h-100">\
+                    <div class="card-body">\
+                        <h2 class="card-title">${item.name}</h2>\
+                        <div>형태 : ${item.laneType}</div>\
+                        <div>개수 : ${item.lanes}</div>\
+                        <div class="card-footer"><a class="btn btn-primary btn-sm" onclick="$.selectOne(${item.id});">${item.phoneNumber}</a></div>
                     </div>\
+<!--                </div>\-->
                 </div>\
             </div>`;
-
-            str = "<div class=\"row gx-4 gx-lg-5\">";
-            str += "<div class=\"col-md-4 mb-5\">";
-            str += "<div class=\"card h-100\">";
-            str += "<div class=\"card-body\">";
-            str += "<div>이름 : " + item.name + "</div>";
-            str += "<div>전화 : " + item.phoneNumber + "</div>";
-            str += "<div>형태 : " + item.laneType + "</div>";
-            str += "<div>개수 : " + item.lanes + "</div>";
-            str += "</div></div></div></div>";
             return str;
         }
 
         $.showInsertPopup = () => {
-            $('.modal_popup').fadeIn(1000);
-            $('.modal_background').fadeIn(1000);
+            $('.modal_popup').fadeIn(300);
+            $('.modal_background').fadeIn(300);
         }
 
         $.insert = function() {
-            let dataswimpool = {
-                "name": $("#inName").val(),
-                "lanes": $("#inLanes").val(),
-                "laneType": $("#inLaneType").val(),
-                "phoneNumber": $("#inPhoneNumber").val(),
-                "addr": $("#inAddr").val()
+            let inputData = {
+                "name" : $("#inName").val()
+                , "phoneNumber": $("#inPhoneNumber").val()
+                , "addr": $("#inAddr").val()
+                , "laneType": $("#inLaneType").val()
+                , "lanes": $("#inLanes").val()
             };
-
             $.ajax({
-                url: '/api/v1/swimpool',
-                type: "POST",
-                data: JSON.stringify(dataswimpool),
-                datatype: "JSON",
-                contentType: 'application/json',
+                url: '/api/v1/swimpool'
+                , type: 'post'
+                , data: JSON.stringify(inputData)
+                , datatype: 'JSON'
+                , contentType: 'application/json'
             }).done(function(result, textStatus, jqXHR) {
                 // ajax 비동기 요청 실행후에 서버에서 정상 응답이 왔을때 실행
                 console.log("Success:", result);
                 $.printList(result.data);
+                $.closeInputPopup();
+            }).fail(function(jqXHR, textStatus, errorThrown) {
+                // ajax 비동기 요청 실행후에 에러 응답이 왔을때 실행
+                console.log("Error:", jqXHR, textStatus, errorThrown);
+                let msg = "";
+                for( let i = 0; i < jqXHR.responseJSON.errors.length; i++ ) {
+                    msg += `${jqXHR.responseJSON.errors[i].codes[1]} : ${jqXHR.responseJSON.errors[i].defaultMessage}\n`;
+                }
+                alert(msg);
+            });
+        }
+
+        $.closeInputPopup = () => {
+            $.clearInputPopup();
+            // $('.modal_popup').fadeOut(300);
+            // $('.modal_background').fadeOut(300);
+            $(".modalCloseButton").trigger("click");
+            $.list();
+        }
+        $.clearInputPopup = function() {
+            $("#inName").val("");
+            $("#inPhoneNumber").val("");
+            $("#inAddr").val("");
+            $("#inLaneType").val("25");
+            $("#inLanes").val("");
+        }
+
+        $.selectOne = function(id) {
+            $.ajax({
+                // javascript 의 Ajax 모태로 만든 jQuery Ajax 를 실행한다.
+                // ajax : 비동기 자바스크립트 http 통신 방법
+                url: '/api/v1/swimpool/' + id
+                , type: 'get'
+            }).done(function(result, textStatus, jqXHR) {
+                // ajax 비동기 요청 실행후에 서버에서 정상 응답이 왔을때 실행
+                console.log("Success:", result);
+                $.showOne(result.data);
             }).fail(function(jqXHR, textStatus, errorThrown) {
                 // ajax 비동기 요청 실행후에 에러 응답이 왔을때 실행
                 console.log("Error:", jqXHR, textStatus, errorThrown);
@@ -161,13 +218,51 @@
             });
         }
 
-        $.update = function() {
-            $.ajax({
+        $.showOne = function(item) {
+            $("#titleForm").text("보기");
+            $("#insertActionButton").hide();
+            $("#updateButton").show();
+            $("#updateActionButton").hide();
+            $("#deleteActionButton").show();
 
+            $("#id").val(item.id);
+            $("#inName").val(item.name);
+            $("#inPhoneNumber").val(item.phoneNumber);
+            $("#inAddr").val(item.addr);
+            $("#inLaneType").val(item.laneType);
+            $("#inLanes").val(item.lanes);
+
+            $("#inName").attr("disabled", "true");
+            $("#inPhoneNumber").attr("disabled", "true");
+            $("#inAddr").attr("disabled", "true");
+            $("#inLaneType").attr("disabled", "true");
+            $("#inLanes").attr("disabled", "true");
+
+            $('.modal_popup').fadeIn(300);
+            $('.modal_background').fadeIn(300);
+        }
+
+        $.update = function() {
+            let updateData = {
+                "id" : $("#id").val()
+                , "name" : $("#inName").val()
+                , "phoneNumber": $("#inPhoneNumber").val()
+                , "addr": $("#inAddr").val()
+                , "laneType": $("#inLaneType").val()
+                , "lanes": $("#inLanes").val()
+            };
+
+            $.ajax({
+                url: '/api/v1/swimpool/' + $("#id").val()
+                , type: 'patch'
+                , data: JSON.stringify(updateData)
+                , datatype: 'json'
+                , contentType: 'application/json'
             }).done(function(result, textStatus, jqXHR) {
                 // ajax 비동기 요청 실행후에 서버에서 정상 응답이 왔을때 실행
                 console.log("Success:", result);
-                $.printList(result.data);
+                $(".modalCloseButton").trigger("click");
+                $.list();
             }).fail(function(jqXHR, textStatus, errorThrown) {
                 // ajax 비동기 요청 실행후에 에러 응답이 왔을때 실행
                 console.log("Error:", jqXHR, textStatus, errorThrown);
@@ -177,11 +272,13 @@
 
         $.delete = function() {
             $.ajax({
-
+                url: '/api/v1/swimpool/' + $("#id").val()
+                , type: 'delete'
             }).done(function(result, textStatus, jqXHR) {
                 // ajax 비동기 요청 실행후에 서버에서 정상 응답이 왔을때 실행
                 console.log("Success:", result);
-                $.printList(result.data);
+                $(".modalCloseButton").trigger("click");
+                $.list();
             }).fail(function(jqXHR, textStatus, errorThrown) {
                 // ajax 비동기 요청 실행후에 에러 응답이 왔을때 실행
                 console.log("Error:", jqXHR, textStatus, errorThrown);
@@ -194,40 +291,32 @@
 <body>
 <div class="wrap">
     <div class="content" style="z-index: 7;">
-        <div id="listPrint" class="container px-4 px-lg-5">
+        <div class="container px-4 px-lg-5">
             <div class="card text-white bg-secondary my-5 py-4 text-center">
                 <div class="card-body"><p class="text-white m-0">수영자 정보 목록</p></div>
             </div>
             <!-- Content Row-->
-            <!--
-            <div class="row gx-4 gx-lg-5">
-                <div class="col-md-4 mb-5">
-                    <div class="card h-100">
-                        <div class="card-body">
-                        <div>이름 : {name}</div>
-                            <div>전화 : {phoneNumber}</div>
-                            <div>형태 : {laneType}</div>
-                            <div>개수 : {lanes}</div>
-                        </div>
-                    </div>
-                </div>
+            <div id="listPrint" class="row gx-4 gx-lg-5">
             </div>
-            -->
         </div>
         <div class="modal_popup" style="display: none; z-index: 9;">
-            <h1>수영장 입력</h1>
+            <h1>수영장 <span id="titleForm">입력</span></h1>
+            <input type="hidden" id="id" name="id" value=""/>
             <div><label for="inName">이름 : </label><input type="text" id="inName" name="name" value="" maxlength="20"/></div>
             <div><label for="inPhoneNumber">번호 : </label><input type="text" id="inPhoneNumber" name="phoneNumber" value="" maxlength="20"/></div>
             <div><label for="inAddr">주소 : </label><input type="text" id="inAddr" name="addr" value="" maxlength="20"/></div>
             <div><label for="inLaneType">레인타입 : </label><select id="inLaneType" name="laneType"><option value="25">25</option><option value="50">50</select></div>
             <div><label for="inLanes">레인수 : </label><input type="number" id="inLanes" name="lanes" value="" maxlength="2" /></div>
-            <div><button onclick="$.insert();">등록</button></div>
+            <div><button id="insertActionButton" onclick="$.insert();">등록</button></div>
+            <div><button id="updateButton">수정</button></div>
+            <div><button id="updateActionButton">수정확인</button></div>
+            <div><button id="deleteActionButton" onclick="$.delete();">삭제</button></div>
             <div><button class="modalCloseButton">닫기</button></div>
         </div>
         <div class="modal_background" style="display: none; z-index: 8;"></div>
         <div>
-            <button onclick="$.showInsertPopup();">수영자추가1</button>
-            <button id="showAddModalButton">수영자추가2</button>
+<!--            <button onclick="$.showInsertPopup();">수영자추가1</button>-->
+            <button id="showAddModalButton">수영자추가</button>
         </div>
     </div>
 </div>
